Write HTML file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,59 @@
     <title>Beraca Electronic</title>
   </head>
   <body>
-    
+    <section class="introduction">
+      <div class="introduction__frame">
+        <header>
+          <nav class="introduction__frame--nav">
+            <ul>
+              <li>
+                <img src="" alt="" />
+              </li>
+              <li>
+                <h2>Beraca Electronic</h2>
+              </li>
+            </ul>
+          </nav>
+        </header>
+        <div class="introduction__catalogue">
+          <iframe src="" frameborder="0"></iframe>
+        </div>
+      </div>
+    </section>
+    <section class="location">
+      <div class="location__title">
+        <h2>Location</h2>
+      </div>
+      <div class="location__map">
+        <iframe src="" frameborder="0"></iframe>
+      </div>
+    </section>
+    <section class="brand-messages">
+      <div class="brand-messages__box">
+        <ul>
+          <li>
+            <p></p>
+          </li>
+          <li>
+            <p></p>
+          </li>
+          <li>
+            <p></p>
+          </li>
+          <li>
+            <p></p>
+          </li>
+          <li>
+            <p></p>
+          </li>
+          <li>
+            <p></p>
+          </li>
+          <li>
+            <p></p>
+          </li>
+        </ul>
+      </div>
+    </section>
   </body>
 </html>
