Finish the layout of 'introduction__frame' part

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
           <nav class="introduction__frame--nav">
             <ul>
               <li>
-                <img src="" alt="" />
+                <img
+                  class="introduction__frame--nav logo"
+                  src="img/beraca-logo.png"
+                  alt=""
+                />
               </li>
               <li>
                 <h2>Beraca Electronic</h2>
@@ -21,9 +25,9 @@
             </ul>
           </nav>
         </header>
-        <div class="introduction__catalogue">
-          <iframe src="" frameborder="0"></iframe>
-        </div>
+      </div>
+      <div class="introduction__catalogue">
+        <iframe src="" frameborder="0"></iframe>
       </div>
     </section>
     <section class="location">
