Fixes some issues with the CSS file and titles

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                   alt=""
                 />
               </li>
-              <li>
+              <li class="introduction__frame--nav title">
                 <h2>Beraca Electronic</h2>
               </li>
             </ul>
