--- a/index.html
+++ b/index.html
@@ -25,9 +25,13 @@
             </ul>
           </nav>
         </header>
+        <hr />
       </div>
       <div class="introduction__catalogue">
-        <iframe src="" frameborder="0"></iframe>
+        <div class="introduction__catalogue--container">
+          <h2 class="introduction__catalogue--container--title">Catálogo</h2>
+        </div>
+        <iframe src="catalogue/catalogue.html" frameborder="0"></iframe>
       </div>
     </section>
     <section class="location">
