Complete 'location' section and advance in the 'brand message section'

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Beraca Electronic</title>
   </head>
   <body>
+    <!--* introduction section -->
     <section class="introduction">
       <div class="introduction__frame">
         <header>
@@ -27,6 +28,7 @@
         </header>
         <hr />
       </div>
+
       <div class="introduction__catalogue">
         <div class="introduction__catalogue--container">
           <h2 class="introduction__catalogue--container--title">Catálogo</h2>
@@ -34,37 +36,63 @@
         <iframe src="catalogue/catalogue.html" frameborder="0"></iframe>
       </div>
     </section>
+
+    <!--* location section -->
     <section class="location">
       <div class="location__title">
-        <h2>Location</h2>
+        <h2>Ubicación de nuestra tienda</h2>
       </div>
       <div class="location__map">
-        <iframe src="" frameborder="0"></iframe>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m13!1m8!1m3!1d3926.111524138776!2d-67.60763100422969!3d10.252588557525234!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTDCsDE1JzA5LjQiTiA2N8KwMzYnMjQuNiJX!5e0!3m2!1sen!2sve!4v1700268640401!5m2!1sen!2sve"
+          height="450"
+          style="border: 0"
+          allowfullscreen="true"
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrad"
+        ></iframe>
       </div>
     </section>
+
+    <!--* brand messages section -->
     <section class="brand-messages">
       <div class="brand-messages__box">
         <ul>
           <li>
-            <p></p>
+            <p>Reprehenderit aliquip do elit deserunt ut do elit ut.</p>
           </li>
           <li>
-            <p></p>
+            <p>
+              Et nostrud velit enim laborum non cillum culpa fugiat ex consequat
+              dolor.
+            </p>
           </li>
           <li>
-            <p></p>
+            <p>
+              In qui duis cupidatat enim commodo eiusmod aliqua tempor eiusmod
+              deserunt.
+            </p>
           </li>
           <li>
-            <p></p>
+            <p>Velit Lorem esse cupidatat ut commodo.</p>
           </li>
           <li>
-            <p></p>
+            <p>
+              Nisi officia culpa enim ad nisi veniam minim reprehenderit aute
+              est deserunt tempor labore culpa.
+            </p>
           </li>
           <li>
-            <p></p>
+            <p>
+              Et sit velit ut aliquip non dolore occaecat sunt cillum aliquip
+              mollit veniam.
+            </p>
           </li>
           <li>
-            <p></p>
+            <p>
+              Voluptate sint ipsum commodo est officia tempor reprehenderit
+              occaecat non proident aliquip fugiat adipisicing laboris.
+            </p>
           </li>
         </ul>
       </div>
