--- a/catalogue/catalogue.html
+++ b/catalogue/catalogue.html
@@ -6,6 +6,13 @@
     <title>Catalogo | Beraca Electronic</title>
   </head>
   <body>
-    <h1>Catalogo</h1>
+    <figure>
+      <img
+        src="https://th.bing.com/th/id/OIG.KPLSPoGByKsTTo1VWXZx?pid=ImgGn"
+        alt=""
+        width="100%"
+        height="10%"
+      />
+    </figure>
   </body>
 </html>
