Build brand-message template & footer

--- a/index.html
+++ b/index.html
@@ -97,5 +97,14 @@
         </ul>
       </div>
     </section>
+    <footer>
+      <div class="footer">
+        <p class="footer__copyright">
+          <i class="bi bi-c-circle-fill"></i>
+          <strong>Beraca Electronic.</strong> Todos los derechos reservados.
+        </p>
+        <p class="footer__made-text">Made in 🇻🇪</p>
+      </div>
+    </footer>
   </body>
 </html>
