Implement link-icons feature succesfully

--- a/catalogue/catalogue.html
+++ b/catalogue/catalogue.html
@@ -6,6 +6,7 @@
     <title>Catalogo | Beraca Electronic</title>
   </head>
   <body>
+    <!-- todo: Start by doing the catalogue -->
     <figure>
       <img
         src="https://th.bing.com/th/id/OIG.KPLSPoGByKsTTo1VWXZx?pid=ImgGn"
