--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@
               <li class="introduction__frame--nav title">
                 <h2>Beraca Electronic</h2>
               </li>
+              <li class="icon whatsapp">
+                <a
+                  href="https://l.instagram.com/?u=https%3A%2F%2Fwa.me%2F584244235920&e=AT1_EcJWTXHTzBhnqI9EoIRfwUf53ty5LeAmj3B70X79UB8UKdl8K2SS3dghOvStBk-vWRX7tXZXSw_R-B6bG2kidF-MhsVwSmdmfas"
+                  ><i class="bi bi-whatsapp"></i
+                ></a>
+              </li>
+              <li class="icon instagram">
+                <a
+                  href="https://www.instagram.com/beracaelectronic/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA=="
+                  target="_blank"
+                  ><i class="bi bi-instagram"></i
+                ></a>
+              </li>
             </ul>
           </nav>
         </header>
@@ -57,6 +70,7 @@
     <!--* brand messages section -->
     <section class="brand-messages">
       <div class="brand-messages__box">
+        <!-- todo: Replace spaces with copywriting messages -->
         <ul>
           <li>
             <p>Reprehenderit aliquip do elit deserunt ut do elit ut.</p>
