Add brand messages list, and bottom 'Call to action' Feature

--- a/index.html
+++ b/index.html
@@ -71,44 +71,61 @@
     <section class="brand-messages">
       <div class="brand-messages__box">
         <!-- todo: Replace spaces with copywriting messages -->
+        <h2 class="brand-messages__box--title">¿Por qué acudir a nosotros?</h2>
         <ul>
           <li>
-            <p>Reprehenderit aliquip do elit deserunt ut do elit ut.</p>
-          </li>
-          <li>
             <p>
-              Et nostrud velit enim laborum non cillum culpa fugiat ex consequat
-              dolor.
+              Podrás comprar cualquier equipo que quieras, por <em>cuotas</em>,
+              a través de nuestro <strong>Sistema de apartado</strong>
             </p>
           </li>
           <li>
             <p>
-              In qui duis cupidatat enim commodo eiusmod aliqua tempor eiusmod
-              deserunt.
-            </p>
-          </li>
-          <li>
-            <p>Velit Lorem esse cupidatat ut commodo.</p>
-          </li>
-          <li>
-            <p>
-              Nisi officia culpa enim ad nisi veniam minim reprehenderit aute
-              est deserunt tempor labore culpa.
+              Te sentirás <strong>asegurado</strong>, nuestros equipos disponen
+              de garantía contra defectos de fabricación ✅
             </p>
           </li>
           <li>
             <p>
-              Et sit velit ut aliquip non dolore occaecat sunt cillum aliquip
-              mollit veniam.
+              ¿Fallas en tu teléfono? No te preocupes, nos encargaremos de
+              repararlo 🔧
+            </p>
+          </li>
+          <li>
+            <p>Disfruta de un ambiente cálido y acogedor en nuestra tienda.</p>
+          </li>
+          <li>
+            <p>
+              Estarás con el mejor servicio técnico de celulares de la ciudad 💯
             </p>
           </li>
           <li>
             <p>
-              Voluptate sint ipsum commodo est officia tempor reprehenderit
-              occaecat non proident aliquip fugiat adipisicing laboris.
+              ¿No tienes idea de qué comprar? Nosotros te asesoraremos para que
+              lleves la mejor opción.
+            </p>
+          </li>
+          <li>
+            <p>
+              Pagar nunca antes fué tan fácil. Aceptamos
+              <strong
+                >divisas, bolívares (Pago móvil, punto), Zelle y Binance</strong
+              >
             </p>
           </li>
         </ul>
+        <div id="frame">
+          <div class="brand-messages__box--action">
+            <p>
+              <a
+                href="https://l.instagram.com/?u=https%3A%2F%2Fwa.me%2F584244235920&e=AT1_EcJWTXHTzBhnqI9EoIRfwUf53ty5LeAmj3B70X79UB8UKdl8K2SS3dghOvStBk-vWRX7tXZXSw_R-B6bG2kidF-MhsVwSmdmfas"
+                target="_blank"
+              >
+                Contactar</a
+              >
+            </p>
+          </div>
+        </div>
       </div>
     </section>
     <footer>
