Complete the catalogue

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="introduction__catalogue--container">
           <h2 class="introduction__catalogue--container--title">Catálogo</h2>
         </div>
-        <iframe src="catalogue/catalogue.html" frameborder="0"></iframe>
+        <iframe src="catalogue/cat-network.html" frameborder="0"></iframe>
       </div>
     </section>
 
