Create and sharp the responsive layout; Change footer's layout

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
                 <h2>Beraca Electronic</h2>
               </li>
               <li class="icon whatsapp">
-                <a
-                  href="https://l.instagram.com/?u=https%3A%2F%2Fwa.me%2F584244235920&e=AT1_EcJWTXHTzBhnqI9EoIRfwUf53ty5LeAmj3B70X79UB8UKdl8K2SS3dghOvStBk-vWRX7tXZXSw_R-B6bG2kidF-MhsVwSmdmfas"
+                <a href="https://wa.me/message/36HR4YSETYGYA1" target="_blank"
                   ><i class="bi bi-whatsapp"></i
                 ></a>
               </li>
@@ -46,7 +45,12 @@
         <div class="introduction__catalogue--container">
           <h2 class="introduction__catalogue--container--title">Catálogo</h2>
         </div>
-        <iframe src="catalogue/cat-network.html" frameborder="0"></iframe>
+        <iframe
+          src="catalogue/cat-network.html"
+          frameborder="0"
+          allowfullscreen
+          title="catalogue content"
+        ></iframe>
       </div>
     </section>
 
@@ -70,13 +74,17 @@
     <!--* brand messages section -->
     <section class="brand-messages">
       <div class="brand-messages__box">
-        <!-- todo: Replace spaces with copywriting messages -->
         <h2 class="brand-messages__box--title">¿Por qué acudir a nosotros?</h2>
         <ul>
           <li>
             <p>
               Podrás comprar cualquier equipo que quieras, por <em>cuotas</em>,
-              a través de nuestro <strong>Sistema de apartado</strong>
+              a través de nuestro
+              <strong
+                ><span class="sistema-apartado"
+                  >Sistema de apartado</span
+                ></strong
+              >
             </p>
           </li>
           <li>
@@ -96,12 +104,13 @@
           </li>
           <li>
             <p>
-              Estarás con el mejor servicio técnico de celulares de la ciudad 💯
+              Estarás con el <strong>mejor servicio técnico</strong> de
+              celulares de la ciudad 💯
             </p>
           </li>
           <li>
             <p>
-              ¿No tienes idea de qué comprar? Nosotros te asesoraremos para que
+              ¿No tienes idea de qué comprar? Te asesoraremos para que
               lleves la mejor opción.
             </p>
           </li>
@@ -109,7 +118,9 @@
             <p>
               Pagar nunca antes fué tan fácil. Aceptamos
               <strong
-                >divisas, bolívares (Pago móvil, punto), Zelle y Binance</strong
+                ><span class="usd">divisas</span>, bolívares (Pago móvil,
+                punto), <span class="zelle">Zelle</span> y
+                <span class="binance">Binance</span></strong
               >
             </p>
           </li>
@@ -117,10 +128,7 @@
         <div id="frame">
           <div class="brand-messages__box--action">
             <p>
-              <a
-                href="https://l.instagram.com/?u=https%3A%2F%2Fwa.me%2F584244235920&e=AT1_EcJWTXHTzBhnqI9EoIRfwUf53ty5LeAmj3B70X79UB8UKdl8K2SS3dghOvStBk-vWRX7tXZXSw_R-B6bG2kidF-MhsVwSmdmfas"
-                target="_blank"
-              >
+              <a href="https://wa.me/message/36HR4YSETYGYA1" target="_blank">
                 Contactar</a
               >
             </p>
@@ -128,14 +136,12 @@
         </div>
       </div>
     </section>
-    <footer>
-      <div class="footer">
-        <p class="footer__copyright">
-          <i class="bi bi-c-circle-fill"></i>
-          <strong>Beraca Electronic.</strong> Todos los derechos reservados.
-        </p>
-        <p class="footer__made-text">Made in 🇻🇪</p>
-      </div>
+    <footer class="footer">
+      <p class="footer__copyright">
+        <i class="bi bi-c-circle-fill"></i>
+        <strong>Beraca Electronic</strong>
+      </p>
+      <p class="footer__made-text">Made in 🇻🇪</p>
     </footer>
   </body>
 </html>
