Improve copy; Fix links' states; Add better external links; Remove several visual issues

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 />
               </li>
               <li class="introduction__frame--nav title">
-                <h2>Beraca Electronic</h2>
+                <h2 id="beraca-electronic">Beraca Electronic</h2>
               </li>
               <li class="icon whatsapp">
                 <a href="https://wa.me/message/36HR4YSETYGYA1" target="_blank"
@@ -78,40 +78,42 @@
         <ul>
           <li>
             <p>
-              Podrás comprar cualquier equipo que quieras, por <em>cuotas</em>,
-              a través de nuestro
-              <strong
-                ><span class="sistema-apartado"
-                  >Sistema de apartado</span
-                ></strong
+              Adquiere cualquier equipo a través de nuestro sistema de apartado
+              <a
+                class="brand-messages__box--link-message"
+                href="https://wa.me/584244235920?text=Quiero%20comprar%20un%20producto%20a%20trav%C3%A9s%20del%20sistema%20de%20apartado%20%F0%9F%8F%B7"
+                >Aquí</a
               >
             </p>
           </li>
           <li>
             <p>
-              Te sentirás <strong>asegurado</strong>, nuestros equipos disponen
-              de garantía contra defectos de fabricación ✅
-            </p>
-          </li>
-          <li>
-            <p>
-              ¿Fallas en tu teléfono? No te preocupes, nos encargaremos de
+              ¿Fallas en tu teléfono? No te preocupes, nos encargamos de
               repararlo 🔧
             </p>
           </li>
           <li>
-            <p>Disfruta de un ambiente cálido y acogedor en nuestra tienda.</p>
-          </li>
-          <li>
             <p>
-              Estarás con el <strong>mejor servicio técnico</strong> de
-              celulares de la ciudad 💯
+              Siéntete <strong>asegurado</strong>, nuestros equipos disponen de
+              garantía contra defectos de fabricación ✅
             </p>
           </li>
           <li>
             <p>
-              ¿No tienes idea de qué comprar? Te asesoraremos para que
-              lleves la mejor opción.
+              Dispones del <strong>mejor servicio técnico</strong> de celulares
+              de la ciudad 💯
+            </p>
+          </li>
+          <li>
+            <p>
+              ¿No tienes idea de qué comprar? Te asesoramos para que lleves la
+              mejor opción.
+            </p>
+          </li>
+          <li>
+            <p>
+              Disfruta de un ambiente cálido, ameno y acogedor en nuestra
+              tienda.
             </p>
           </li>
           <li>
@@ -128,7 +130,10 @@
         <div id="frame">
           <div class="brand-messages__box--action">
             <p>
-              <a href="https://wa.me/message/36HR4YSETYGYA1" target="_blank">
+              <a
+                href="https://wa.me/584244235920?text=Quiero%20contar%20con%20ustedes%20para%20%20mi%20próxima%20compra%F0%9F%A4%9D"
+                target="_blank"
+              >
                 Contactar</a
               >
             </p>
@@ -139,9 +144,9 @@
     <footer class="footer">
       <p class="footer__copyright">
         <i class="bi bi-c-circle-fill"></i>
-        <strong>Beraca Electronic</strong>
+        <strong><a href="#beraca-electronic">Beraca Electronic</a></strong>
       </p>
-      <p class="footer__made-text">Made in 🇻🇪</p>
+      <p class="footer__made-text">Made with love in 🇻🇪</p>
     </footer>
   </body>
 </html>
