Add valid external links to products

--- a/catalogue/cat-network.html
+++ b/catalogue/cat-network.html
@@ -27,7 +27,7 @@
         <p>Doble Banda, Multi-modo, Wi-Fi 5</p>
         <p class="catalogue__container--price">Precio: $35</p>
         <a
-          href="https://wa.me/message/36HR4YSETYGYA1"
+          href="https://wa.me/584244235920?text=Quiero%20comprar%20el%20router%20%22Mercusys%20AC750%20%28MR20%29%22"
           target="_blank"
           class="catalogue__container--buy-button"
           >Comprar</a
@@ -49,7 +49,8 @@
         <p>Wi-Fi 5 - Doble Banda</p>
         <p class="catalogue__container--price">Precio: $40</p>
         <a
-          href="https://wa.me/message/36HR4YSETYGYA1"
+          href="https://wa.me/584244235920?text=Quiero%20comprar%20el%20router%20%22Mercusys%20AC1200%22%20%28AC10%29
+          "
           target="_blank"
           class="catalogue__container--buy-button"
           >Comprar</a
@@ -71,7 +72,7 @@
         <p>Wi-Fi 5, Doble Banda</p>
         <p class="catalogue__container--price">Precio: $45</p>
         <a
-          href="https://wa.me/message/36HR4YSETYGYA1"
+          href="https://wa.me/584244235920?text=Quiero%20comprar%20el%3A%20Mercusys%20AC1200%20%28MR30G%29"
           target="_blank"
           class="catalogue__container--buy-button"
           >Comprar</a
@@ -93,7 +94,7 @@
         <p><strong>Wi-Fi 6</strong> - Doble Banda</p>
         <p class="catalogue__container--price">Precio: $65</p>
         <a
-          href="https://wa.me/message/36HR4YSETYGYA1"
+          href="https://wa.me/584244235920?text=Quiero%20comprar%20el%3A%20Mercusys%20AX1500%20%28MR60X%20V2%29"
           target="_blank"
           class="catalogue__container--buy-button"
           >Comprar</a
@@ -115,7 +116,7 @@
         <p>Wi-Fi 6, Doble Banda, Full Gigabit</p>
         <p class="catalogue__container--price">Precio: $45</p>
         <a
-          href="https://wa.me/message/36HR4YSETYGYA1"
+          href="https://wa.me/584244235920?text=Quiero%20comprar%20el%3A%20Mercusys%20AX1800%20%28MR70X%29"
           target="_blank"
           class="catalogue__container--buy-button"
           >Comprar</a
@@ -137,7 +138,7 @@
         <p><strong>Wi-Fi 5</strong> - Doble Banda</p>
         <p class="catalogue__container--price">Precio: $40</p>
         <a
-          href="https://wa.me/message/36HR4YSETYGYA1"
+          href="https://wa.me/584244235920?text=Quiero%20comprar%20el%3A%20Mercusys%20AC1200%20%28Extensor%20-%20ME30%29"
           target="_blank"
           class="catalogue__container--buy-button"
           >Comprar</a
@@ -159,7 +160,7 @@
         <p>Wi-Fi 4 | CANTV</p>
         <p class="catalogue__container--price">Precio: $45</p>
         <a
-          href="https://wa.me/message/36HR4YSETYGYA1"
+          href="https://wa.me/584244235920?text=Quiero%20comprar%20el%3A%20Mercusys%20MW300D%20%28Modem-Router%29"
           target="_blank"
           class="catalogue__container--buy-button"
           >Comprar</a
