--- a/index.html
+++ b/index.html
@@ -148,5 +148,15 @@
       </p>
       <p class="footer__made-text">Made with love in 🇻🇪</p>
     </footer>
+
+    <!-- Speed Insights -->
+    <script>
+      window.si =
+        window.si ||
+        function () {
+          (window.siq = window.siq || []).push(arguments);
+        };
+    </script>
+    <script defer src="/_vercel/speed-insights/script.js"></script>
   </body>
 </html>
