Create HTML products dynamically

--- a/catalogue/cat-network.html
+++ b/catalogue/cat-network.html
@@ -12,52 +12,8 @@
         <h1>Redes</h1>
       </header>
     </nav>
-    <section class="catalogue">
-      <div class="catalogue__container image">
-        <figure>
-          <img
-            src="/img/catalogue/network/ac750.png"
-            alt="Router AC750 Mercusys"
-          />
-        </figure>
-      </div>
-      <div class="catalogue__container product-desc">
-        <h2>Mercusys AC750 (MR20)</h2>
-        <p>750 Mbps | 2 Antenas | Fácil de Instalar</p>
-        <p>Doble Banda, Multi-modo, Wi-Fi 5</p>
-        <p class="catalogue__container--price">Precio: $35</p>
-        <a
-          href="https://wa.me/584244235920?text=Quiero%20comprar%20el%20router%20%22Mercusys%20AC750%20%28MR20%29%22"
-          target="_blank"
-          class="catalogue__container--buy-button"
-          >Comprar</a
-        >
-      </div>
     </section>
-    <section class="catalogue" id="reversed">
-      <div class="catalogue__container image">
-        <figure>
-          <img
-            src="/img/catalogue/network/ac1200.png"
-            alt="Router AC1200 Mercusys"
-          />
-        </figure>
-      </div>
-      <div class="catalogue__container product-desc">
-        <h2>Mercusys AC1200 (AC10)</h2>
-        <p>1167 Mbps | 4 Antenas (Alta Ganancia) | Control Parental</p>
-        <p>Wi-Fi 5 - Doble Banda</p>
-        <p class="catalogue__container--price">Precio: $40</p>
-        <a
-          href="https://wa.me/584244235920?text=Quiero%20comprar%20el%20router%20%22Mercusys%20AC1200%22%20%28AC10%29
-          "
-          target="_blank"
-          class="catalogue__container--buy-button"
-          >Comprar</a
-        >
-      </div>
-    </section>
-    <section class="catalogue">
+    <!--     <section class="catalogue">
       <div class="catalogue__container image">
         <figure>
           <img
@@ -234,6 +190,7 @@
           >Comprar</a
         >
       </div>
-    </section>
+    </section> -->
+    <script src="/resources/cat-network.js"></script>
   </body>
 </html>
