Optimze HTML product creation

--- a/catalogue/cat-network.html
+++ b/catalogue/cat-network.html
@@ -191,6 +191,7 @@
         >
       </div>
     </section> -->
-    <script src="/resources/cat-network.js"></script>
+    <script type="module" src="/resources/cat-network.js"></script>
+    <script type="module" src="/resources/template.js"></script>
   </body>
 </html>
