Optimize HTML render by using 'template.js' module

--- a/catalogue/cat-smartphones.html
+++ b/catalogue/cat-smartphones.html
@@ -13,6 +13,7 @@
         <h1>Smartphones</h1>
       </header>
     </nav>
-    <script src="/resources/cat-smartphones.js"></script>
+    <script type="module" src="/resources/cat-smartphones.js"></script>
+    <script type="module" src="/resources/template.js"></script>
   </body>
 </html>
