Apply 'defer' to js modules to increase performance

--- a/catalogue/cat-network.html
+++ b/catalogue/cat-network.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- styles -->
     <link rel="stylesheet" href="/styles/catalogue.css" />
+
+    <!-- scripts -->
+    <script type="module" src="/resources/cat-network.js" defer></script>
+    <script type="module" src="/resources/template.js" defer></script>
     <title>Catalogo | Redes</title>
   </head>
   <body>
@@ -13,7 +19,5 @@
       </header>
     </nav>
     </section>
-    <script type="module" src="/resources/cat-network.js"></script>
-    <script type="module" src="/resources/template.js"></script>
   </body>
 </html>
